panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__assignment__test_assignment_to_derefd_void_ptr.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/assignment/test_assignment_to_derefd_void_ptr.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: cannot assign to this expression because it is not an lvalue
   ╭─[panko/tests/cases/assignment/test_assignment_to_derefd_void_ptr.c:6:5]
   │
 6 │     *p = f();
   │     ─┬  
   │      ╰── this expression is not an lvalue
───╯
